[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/lobby.gd" type="Script" id=1]
[ext_resource path="res://scenes/lobbyplayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/letterArea.gd" type="Script" id=3]
[ext_resource path="res://assets/keybordbg-removebg.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.4375, 25.5 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_right = -3.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -177.5
margin_right = 126.0
margin_bottom = 177.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Ready" type="Button" parent="Players"]
margin_left = 86.0
margin_top = 307.5
margin_right = 170.0
margin_bottom = 336.5
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Ready"

[node name="List" type="ItemList" parent="Players"]
margin_left = 25.0
margin_top = 37.0
margin_right = 229.0
margin_bottom = 296.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="PortForward" type="Label" parent="Players"]
visible = false
margin_left = -124.0
margin_top = 375.0
margin_right = 128.0
margin_bottom = 429.0
custom_constants/line_spacing = 6
text = "If you want non-LAN clients to connect,
make sure the port 10567 in UDP
is forwarded on your router."
align = 1

[node name="Character_Choice" type="Control" parent="Players"]
margin_left = 253.0
margin_top = 3.0
margin_right = 535.0
margin_bottom = 141.0

[node name="Char1" type="Button" parent="Players/Character_Choice"]
margin_left = 25.0
margin_top = 7.0
margin_right = 101.0
margin_bottom = 77.0
theme = ExtResource( 3 )
toggle_mode = true
pressed = true
icon = ExtResource( 2 )
expand_icon = true

[node name="Char2" type="Button" parent="Players/Character_Choice"]
margin_left = 117.0
margin_top = 7.5
margin_right = 193.0
margin_bottom = 77.5
theme = ExtResource( 3 )
toggle_mode = true
icon = ExtResource( 4 )
expand_icon = true

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.464
anchor_top = 0.48
anchor_right = 0.464
anchor_bottom = 0.48
margin_left = -86.136
margin_top = -284.0
margin_right = 120.864
margin_bottom = -122.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 75.0
margin_top = 30.0
margin_right = 117.0
margin_bottom = 44.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 19.5
margin_top = 54.5
margin_right = 175.5
margin_bottom = 78.5
size_flags_horizontal = 2
size_flags_vertical = 2
editable = false

[node name="Join" type="Button" parent="Connect"]
margin_left = 71.5
margin_top = 106.5
margin_right = 136.5
margin_bottom = 126.5
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 12.0
margin_top = 137.0
margin_right = 200.0
margin_bottom = 155.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2
window_title = "Alerte !"

[node name="lobbyPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 203, 83 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 3, 0 )

[node name="A" type="Area2D" parent="Node2D"]
position = Vector2( 300, 299 )
scale = Vector2( 0.420526, 0.452513 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/A"]
position = Vector2( -237, 113 )
shape = SubResource( 1 )

[node name="S" type="Area2D" parent="Node2D"]
position = Vector2( 339, 235 )
script = ExtResource( 3 )
letter_name = "s"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/S"]
position = Vector2( -77, 115 )
shape = SubResource( 1 )

[node name="D" type="Area2D" parent="Node2D"]
position = Vector2( 400, 235 )
script = ExtResource( 3 )
letter_name = "d"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/D"]
position = Vector2( -77, 115 )
shape = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = 121.0
margin_top = 184.0
margin_right = 877.0
margin_bottom = 514.0
texture = ExtResource( 4 )

[connection signal="pressed" from="Players/Ready" to="." method="_on_Ready_pressed"]
[connection signal="pressed" from="Players/Character_Choice/Char1" to="." method="_on_Char1_pressed"]
[connection signal="pressed" from="Players/Character_Choice/Char2" to="." method="_on_Char2_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
[connection signal="area_entered" from="Node2D/A" to="lobbyPlayer" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Node2D/A" to="lobbyPlayer" method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Node2D/S" to="lobbyPlayer" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Node2D/S" to="lobbyPlayer" method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Node2D/D" to="lobbyPlayer" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Node2D/D" to="lobbyPlayer" method="_on_Area2D_area_exited"]
